syntax = "proto3";

package kvuser;

message UserData {
    string username = 1;
    bytes password = 2;
    string email = 3;
}

message TokenData {
    string username = 1;
    int64 timestamp = 2;
}